[package]
name = "gm-ffi"
version = "0.1.0"
authors = ["Gabe Weiner <imlazyeye@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# blank feature to enable std
use_std = []

[dependencies]
cty  = "0.2"
cstr_core = "0.2"