[package]
name = "gm-ffi"
version = "0.2.1"
authors = [
    "Gabe Weiner <gabe@npcstudio.com>",
    "Jonathan Spira <jack@npcstudio.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npc-studio/gm-ffi"
description = "an interface between GameMaker and Rust"
categories = ["game-development"]

[target.'cfg(not(windows))'.dependencies]
interprocess = "1.2.1"
once_cell = "1.17.1"
parking_lot = "0.12.1"
